--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -200,7 +200,7 @@ jobs:
     strategy:
       matrix:
         ubuntu: ['ubuntu-20.04', 'ubuntu-18.04']
-    needs: [clang_check]
+    needs: [get_obs_info, get_plugin_info, clang_check]
     defaults:
       run:
         shell: bash
