--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -225,6 +225,7 @@ jobs:
         working-directory: 'plugin'
         run: |
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
+          chmod +x CI/linux/01_install_dependencies.sh
           CI/linux/01_install_dependencies.sh --disable-pipewire
         
       - name: 'Build libobs and obs-frontend-api'
@@ -232,6 +233,7 @@ jobs:
         working-directory: 'plugin'
         run: |
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
+          chmod +x CI/linux/02_build_obs-libs.sh
           CI/linux/02_build_obs-libs.sh --disable-pipewire
         
       - name: 'Build plugin'
@@ -244,6 +246,7 @@ jobs:
         working-directory: 'plugin'
         run: |
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
+          chmod +x CI/linux/04_package_plugin.sh
           CI/linux/04_package_plugin.sh
 
       - name: 'Upload build Artifact'
