--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ include(external/GitInfoHelper.cmake)
 get_git_version(OBS_RTSPSERVER_GIT_TAG OBS_RTSPSERVER_VERSION OBS_RTSPSERVER_SHORT_VERSION OBS_RTSPSERVER_LONG_VERSION)
 project(obs-rtspserver VERSION ${OBS_RTSPSERVER_LONG_VERSION})
 set(LINUX_MAINTAINER_EMAIL "scottxu@scottxublog.com")
+set(CMAKE_PROJECT_VERSION "${OBS_RTSPSERVER_VERSION}")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
