--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -254,7 +254,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: '${{ env.PRODUCT_NAME }}-linux-${{ matrix.ubuntu }}'
-          path: '${{ github.workspace }}/plugin/build/*'
+          path: '${{ github.workspace }}/plugin/build/*.(deb|tar.gz)'
           
   macos_build:
     name: 'Mac OS 64bit'
