--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -225,6 +225,7 @@ jobs:
         working-directory: 'plugin'
         run: |
           git describe --tags --always --dirty='-dev' --debug
+          git log
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
           chmod +x CI/linux/01_install_dependencies.sh
           CI/linux/01_install_dependencies.sh --disable-pipewire
@@ -233,6 +234,7 @@ jobs:
         working-directory: 'plugin'
         run: |
           git describe --tags --always --dirty='-dev' --debug
+          git log
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
           chmod +x CI/linux/02_build_obs_libs.sh
           CI/linux/02_build_obs_libs.sh --disable-pipewire
@@ -241,6 +243,7 @@ jobs:
         working-directory: 'plugin'
         run: |
           git describe --tags --always --dirty='-dev' --debug
+          git log
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
           chmod +x CI/linux/03_build_plugin.sh
           CI/linux/03_build_plugin.sh
@@ -249,6 +252,7 @@ jobs:
         working-directory: 'plugin'
         run: |
           git describe --tags --always --dirty='-dev' --debug
+          git log
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
           chmod +x CI/linux/04_package_plugin.sh
           CI/linux/04_package_plugin.sh
