--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -224,38 +224,26 @@ jobs:
       - name: "Install Dependencies"
         working-directory: 'plugin'
         run: |
-          git describe --tags --always --dirty='-dev' --debug
-          git diff
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
-          chmod +x CI/linux/01_install_dependencies.sh
-          CI/linux/01_install_dependencies.sh --disable-pipewire
+          source CI/linux/01_install_dependencies.sh --disable-pipewire
         
       - name: 'Build libobs and obs-frontend-api'
         working-directory: 'plugin'
         run: |
-          git describe --tags --always --dirty='-dev' --debug
-          git diff
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
-          chmod +x CI/linux/02_build_obs_libs.sh
-          CI/linux/02_build_obs_libs.sh --disable-pipewire
+          source CI/linux/02_build_obs_libs.sh --disable-pipewire
         
       - name: 'Build plugin'
         working-directory: 'plugin'
         run: |
-          git describe --tags --always --dirty='-dev' --debug
-          git diff
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
-          chmod +x CI/linux/03_build_plugin.sh
-          CI/linux/03_build_plugin.sh
+          source CI/linux/03_build_plugin.sh
         
       - name: 'Create build artifact'
         working-directory: 'plugin'
         run: |
-          git describe --tags --always --dirty='-dev' --debug
-          git diff
           export OBS_VERSION="${{ needs.get_obs_info.outputs.git_tag }}"
-          chmod +x CI/linux/04_package_plugin.sh
-          CI/linux/04_package_plugin.sh
+          source I/linux/04_package_plugin.sh
 
       - name: 'Upload build Artifact'
         uses: actions/upload-artifact@v2
