--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -350,7 +350,7 @@ jobs:
           path:  ${{ github.workspace }}/release/*
             
   make-release:
-    name: '05 - Upload release'
+    name: '05 - Upload release files'
     runs-on: [ubuntu-latest]
     needs: [get_plugin_info, windows_package, linux_build, macos_build]
     steps:
@@ -382,7 +382,7 @@ jobs:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ${{ github.workspace }}/${{ env.PRODUCT_NAME }}-linux-ubuntu-20.04/obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag }}-linux.tar.gz
           asset_name: obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag }}-linux.tar.gz
-          asset_content_type: application/x-tar
+          asset_content_type: application/x-gzip
       - name: 'Upload linux .deb artifact to release'
         uses: actions/upload-release-asset@v1
         env:
@@ -390,8 +390,8 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ${{ github.workspace }}/${{ env.PRODUCT_NAME }}-linux-ubuntu-20.04/obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag }}-linux.deb
-          asset_name: obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag }}-linux.tar.gz
-          asset_content_type: application/x-tar
+          asset_name: obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag }}-linux.deb
+          asset_content_type: application/vnd.debian.binary-package
       - name: 'Upload macos .zip artifact to release'
         uses: actions/upload-release-asset@v1
         env:
