--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ get_git_version(OBS_RTSPSERVER_GIT_TAG OBS_RTSPSERVER_VERSION OBS_RTSPSERVER_SHO
 project(obs-rtspserver VERSION ${OBS_RTSPSERVER_LONG_VERSION})
 set(LINUX_MAINTAINER_EMAIL "scottxu@scottxublog.com")
 set(CMAKE_PROJECT_VERSION "${OBS_RTSPSERVER_VERSION}")
+if(OS_MACOS)
+	set(MACOS_BUNDLEID "com.scottxu.obs-rtspserver")
+    set(MACOSX_PLUGIN_GUI_IDENTIFIER "${MACOS_BUNDLEID}")
+    set(MACOSX_PLUGIN_BUNDLE_VERSION "${OBS_RTSPSERVER_LONG_VERSION}")
+    set(MACOSX_PLUGIN_SHORT_VERSION_STRING "${OBS_RTSPSERVER_VERSION}")
+endif()
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
