--- a/bundle/installer-macos.pkgproj.in
+++ b/bundle/installer-macos.pkgproj.in
@@ -51,7 +51,7 @@
 															<key>GID</key>
 															<integer>80</integer>
 															<key>PATH</key>
-															<string>../build-package/obs-rtspserver</string>
+															<string>../@RELATIVE_INSTALL_PATH@/@CMAKE_PROJECT_NAME@.plugin</string>
 															<key>PATH_TYPE</key>
 															<integer>1</integer>
 															<key>PERMISSIONS</key>
@@ -505,11 +505,11 @@
 				<key>FOLLOW_SYMBOLIC_LINKS</key>
 				<false/>
 				<key>IDENTIFIER</key>
-				<string>com.scottxu.pkg.obs-rtspserver</string>
+				<string>@MACOS_BUNDLEID@</string>
 				<key>LOCATION</key>
 				<integer>0</integer>
 				<key>NAME</key>
-				<string>obs-rtspserver</string>
+				<string>@CMAKE_PROJECT_NAME@</string>
 				<key>OVERWRITE_PERMISSIONS</key>
 				<false/>
 				<key>PAYLOAD_SIZE</key>
@@ -521,7 +521,7 @@
 				<key>USE_HFS+_COMPRESSION</key>
 				<false/>
 				<key>VERSION</key>
-				<string>%{VERSION}</string>
+				<string>@OBS_PLUGUN_LONG_VERSION@</string>
 			</dict>
 			<key>TYPE</key>
 			<integer>0</integer>
@@ -944,7 +944,7 @@
 				</dict>
 			</array>
 			<key>NAME</key>
-			<string>obs-rtspserver</string>
+			<string>@CMAKE_PROJECT_NAME@</string>
 			<key>PAYLOAD_ONLY</key>
 			<false/>
 			<key>TREAT_MISSING_PRESENTATION_DOCUMENTS_AS_WARNING</key>
