--- a/bundle/installer-macos.pkgproj.in
+++ b/bundle/installer-macos.pkgproj.in
@@ -521,7 +521,7 @@
 				<key>USE_HFS+_COMPRESSION</key>
 				<false/>
 				<key>VERSION</key>
-				<string>@OBS_PLUGUN_LONG_VERSION@</string>
+				<string>@PROJECT_VERSION@</string>
 			</dict>
 			<key>TYPE</key>
 			<integer>0</integer>
