--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
 *.aps
-*.rc
+rtspoutput.rc
 resource.h
+bundle/installer-macos.generated.pkgproj
+bundle/LICENSE.txt
+bundle/macOS/Plugin-Info.plist
